*
* 2.0.9
*

- Fixed bug in NXSL string concatenation
- AnySMS SMS driver
- JMX subagent backported from 2.1 branch
- Fixed isses: NX-1111, NX-1129, NX-1198


*
* 2.0.8
*

- Fixed response parsing in MyMobile SMS driver
- Improved HP ProCurve driver
- Fixed high CPU load on FreeBSD
- Event sending by agent do not restricted to master servers only anymore
- Default RADIUS authentication method set to PAP to maintain compatibility with older versions
- Threshold violation events are re-sent after higher priority threshold rearmed (2.0.8.1)
- Fixed server crash when executing scheduled script (2.0.8.1)
- Fixed issues: NX-1013, NX-1060, NX-1062, NX-1098, NX-1099, NX-1103, NX-1122


*
* 2.0.7
*

- Number of polls can be set for "diff" type thresholds
- New method "enableDiscoveryPolling" in NXSL class "Node"
- New NXSL functions: AgentExecuteAction, GetAllNodes
- NXSL functions GetNodeInterfaces, GetNodeTemplates, GetNodeParents, GetObjectChildren returns correct object classes
- Instance discovery scripts can return instances as map instance/instance name
- SMS driver for Nexmo service
- SMS driver for SMSEagle gateway
- SMS driver for MyMobile service
- H3C driver correctly reads IPv6 addresses on interfaces
- Added support for CHAP, MS-CHAPv1, and MS-CHAPv2 in RADIUS authentication
- Fixed FreeBSD 11 compatibility issues
- Fixed excessive memory consumption by web UI in some situations
- Fixed server crash when changing scheduled tasks
- Fixed various minor UI glitches
- Fixed issues: NX-870


*
* 2.0.6
*

- Fixed incorrect interface network mask reported by agent on Windows XP and Windows Server 2003
- Added option to turn off quotes in AT+CMGS command in generic SMS driver
- Improved compatibility with different GSM modem types in generic SMS driver
- Fixed SQL errors when saving LDAP users to database
- Fixed excessive temporary files creation by web UI
- Fixed build errors on Solaris 11
- Fixed memory leak in Oracle DB driver