@@ -565,7 +565,7 @@ AC_ARG_WITH(dist,
 [AS_HELP_STRING(--with-dist,for maintainers only)],
 	DB_DRIVERS=" mysql pgsql odbc mssql sqlite oracle db2 informix"
 	MODULES="appagent jansson libexpat libstrophe libtre zlib libnetxms install sqlite snmp libnxsl libnxmb libnxlp libnxcc db server smsdrv agent libnxmap client nxscript nxcproxy nxlptest tools"
-	SUBAGENT_DIRS="linux ds18x20 freebsd openbsd minix netbsd sunos aix ipso hpux odbcquery informix oracle lmsensors darwin rpi java ubntlw netsvc db2 tuxedo mongodb"
+	SUBAGENT_DIRS="linux ds18x20 freebsd openbsd minix netbsd sunos aix ipso hpux odbcquery informix oracle lmsensors darwin rpi java bind9 jmx ubntlw netsvc db2 tuxedo mongodb"
 	SMSDRV_DIRS="anysms kannel mymobile nexmo nxagent slack smseagle text2reach websms"
    HDLINK_DIRS="jira"
    PDSDRV_DIRS="rrdtool"
@@ -837,7 +837,7 @@ fi
 
 check_substr "$COMPONENTS" "java"
 if test $? = 0; then
-	SUBAGENT_DIRS="$SUBAGENT_DIRS java ubntlw"
+	SUBAGENT_DIRS="$SUBAGENT_DIRS java bind9 jmx ubntlw"
 fi
 
 check_substr "$COMPONENTS" "tuxedo"
@@ -3120,6 +3120,7 @@ AC_CONFIG_FILES([
 	src/agent/libnxsd/Makefile
 	src/agent/subagents/Makefile
 	src/agent/subagents/aix/Makefile
+	src/agent/subagents/bind9/Makefile
 	src/agent/subagents/darwin/Makefile
 	src/agent/subagents/db2/Makefile
 	src/agent/subagents/dbquery/Makefile
@@ -3149,6 +3150,7 @@ AC_CONFIG_FILES([
 	src/agent/subagents/java/sample/src/main/java/org/netxms/Makefile
 	src/agent/subagents/java/sample/src/main/java/org/netxms/agent/Makefile
 	src/agent/subagents/java/sample/src/main/java/org/netxms/agent/demo/Makefile
+	src/agent/subagents/jmx/Makefile
 	src/agent/subagents/linux/Makefile
 	src/agent/subagents/lmsensors/Makefile
 	src/agent/subagents/logwatch/Makefile
