@@ -1,0 +1,10 @@
+package com.github.tomaskir.netxms.subagents.bind9.exceptions;
+
+/**
+ * @author Tomas Kirnak
+ * @since 2.1-M1
+ */
+public final class CollectionErrorException extends Exception 
+{
+   private static final long serialVersionUID = 1L;
+}
